Fixed bug where player 2 would get player 1's points

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -89,8 +89,8 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level1
-MRUItem1=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Level1
 MRUItem2=/Game/Levels/Level2
 MRUItem3=/Game/Levels/Level_2
 MRUItem4=/Game/Levels/PrototypeLevel
@@ -160,12 +160,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level1
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Target.Target
-OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
+OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1611,6 +1610,11 @@ MovementWaypoint_C.TransformCommon=True
 MovementWaypoint_C.Rendering=True
 MovementWaypoint_C.Input=True
 MovementWaypoint_C.Actor=True
+BounceGamemode_C.Tick=True
+BounceGamemode_C.Default=True
+BounceGamemode_C.Classes=True
+BounceGamemode_C.Game=True
+BounceGamemode_C.GameMode=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -2577,7 +2581,7 @@ IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCate
 K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BoolProperty=
 NewTarget_C=
 
 [MaterialInstanceEditor]
