Increased cannon speed and colour coded bullets

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,6 +165,11 @@ LastLevel=/Game/Levels/MainMenu
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
+OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
+OpenAssetsAtExit=/Game/Materials/Player1BulletMaterial.Player1BulletMaterial
+OpenAssetsAtExit=/Game/Materials/Player2BulletMaterial.Player2BulletMaterial
+OpenAssetsAtExit=/Game/Materials/Player1Cannon.Player1Cannon
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1768,7 +1773,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2575,12 +2580,12 @@ SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=
-FloatProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+FloatProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=
 BoolProperty=
 NewTarget_C=
 
