Updated Help Screen with target picture

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=28)
+NewWindowPosition=(X=685,Y=23)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -157,19 +157,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Textures/HelpPictures
 
 [EditorStartup]
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
-OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
-OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
-OpenAssetsAtExit=/Game/Materials/Player1BulletMaterial.Player1BulletMaterial
-OpenAssetsAtExit=/Game/Materials/Player2BulletMaterial.Player2BulletMaterial
-OpenAssetsAtExit=/Game/Materials/Player1Cannon.Player1Cannon
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1766,6 +1761,10 @@ BounceGamemode_C.GameMode=True
 /Game/Particles/Particle_01.Particle_01=1
 /Game/Particles/Particle_2.Particle_2=1
 /Game/Particles/Particle_3.Particle_3=1
+/Game/Textures/HelpPictures/BlockerTilePic.BlockerTilePic=1
+/Game/Textures/HelpPictures/TargetPic.TargetPic=1
+/Game/Textures/HelpPictures/BreakableTilePic.BreakableTilePic=1
+/Game/Textures/HelpPictures/NormalTilePic.NormalTilePic=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1773,7 +1772,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1926,7 +1925,7 @@ UNR=../../../../../../g11/mgp-mgp-group-11/Development/Unreal Project/Content/Le
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
-GenericImport=../../../../../../Users/John/Desktop/button_circle_glow.png
+GenericImport=../../../../../../Users/Tyler/Desktop/TargetPic.png
 GenericExport=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericOpen=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericSave=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
